added a heirarchical appsettings file to mock configurations for dev and prod style environment variables and app settings. updated services to use those settings and show the difference when the environment variable is changed.

--- a/CityInfo.API/appsettings.json
+++ b/CityInfo.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "mailSettings": {
-    "mailToAddress": "admin@dennistouchet.com",
+    "mailToAddress": "developer@dennistouchet.com",
     "mailFromAddress": "noreply@dennistouchet.com"
   }
 }
