modified process to use app settings/environment variables for connection strings.

--- a/CityInfo.API/appsettings.json
+++ b/CityInfo.API/appsettings.json
@@ -2,5 +2,9 @@
   "mailSettings": {
     "mailToAddress": "developer@dennistouchet.com",
     "mailFromAddress": "noreply@dennistouchet.com"
-  }
+  },
+  "connectionStrings":
+    {
+      "cityInfoDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CityInfoDb;Trusted_Connection=True;"
+    }
 }
