--- a/CityInfo.API/Properties/launchSettings.json
+++ b/CityInfo.API/Properties/launchSettings.json
@@ -12,8 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production",
-        "connectionStrings:cityInfoDBConnectionString": "Server=myproductionserver;Databse=CityInfoDB;UserId=CertainlyNotSa;Password=CertainlyNotSA"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "CityInfo.API": {
